[package]
name = "dedup-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-performance duplicate file scanner using multi-stage filtering (size -> partial hash -> full hash)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lihongjie0209/dedup-rs"

[dependencies]
# Fast, parallel directory traversal
jwalk = "0.6"

# Easy data parallelism
rayon = "1.10"

# High-performance hashing
blake3 = "1.6"

# CLI arg parsing
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# For JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 系统信息（磁盘类型检测等）
sysinfo = { version = "0.30", default-features = true }

# 获取 CPU 核心数
num_cpus = "1.16"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "symbols"
